# resource-monitor

./: .gitignore  pyproject.toml  readme.md  usage.py
resource_monitor/: ascii_escape.py  main.py  netdata_resources.py  utils.py
