[project]
name = "resource_monitor"
version = "0.1.0"
description = "A simple resource monitor."
requires-python = ">=3.8"
dependencies = [
    "psutil"
]

[project.scripts]
resource_monitor = "resource_monitor.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
